# xyber

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/chroma_db/: chroma.sqlite3
logs/: telegram.out  web.out
src/: __init__.py  config.py
src/api/: __init__.py  models.py  server.py
src/core/: __init__.py  rag.py
src/ingestion/: crawler.py  store.py
src/telegram_bot/: __init__.py  bot.py
src/utils/: __init__.py  cli.py  exceptions.py  logger.py  text_processor.py
src/web/: __init__.py  index.html  script.js  styles.css
